# pagexml-hf

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml
docs/: class_diagram.puml  conf.py  index.rst
examples/: example_usage.py
pagexml_hf/: __init__.py  __main__.py  __version__.py  cli.py  converter.py  exporters.py  hub_utils.py  imageutils.py  logger.py  parser.py
tests/: README.md  conftest.py  test_converter.py  test_exporters.py  test_hub_utils.py  test_imageutils.py  test_parser.py
transkribus_hf/: __init__.py  __version__.py  cli.py
