[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pagexml-hf"
dynamic = ["version"]
description = """
    Fork of transkribus-hf (https://github.com/wjbmattingly/transkribus-hf).
    Convert Transkribus ZIP files or a PageXML export folder (with images) to HuggingFace datasets
 """
authors = [
    { name = "Dana Rebecca Meyer", email = "dameyer@techfak.uni-bielefeld.de" },
    { name = "Jonas Widmer", email = "jonas.widmer@unibe.ch" }
]
requires-python = ">=3.10"
dependencies = [
    "chardet<=5.2.0",
    "datasets<=4.0.0",
    "huggingface-hub>=1.4.1",
    "loguru>=0.7.3",
    "lxml>=4.6.0",
    "numpy",
    "pillow>=12.1.1",
    "requests>=2.0.0",
    "scikit-image",
    "tqdm",
]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
keywords = [
    "huggingface",
    "datasets",
    "transkribus",
    "pagexml",
    "ocr",
    "htr",
    "digital-humanities",
    "nlp",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-Pillow>=10.2.0",
    "types-PyYAML>=6.0.12",
    "lxml-stubs>=0.5.1",
]
docs = [
    "sphinx>=8.1.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=2.5.0",
    "myst-parser>=4.0.0",
]

[project.scripts]
pagexml-hf = "pagexml_hf.cli:main"

[project.urls]
Homepage = "https://flow-project.net"
Repository = "https://github.com/The-Flow-Project/pagexml-hf"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "PT", # flake8-pytest-style
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "UP045", # Replace Optional with pipe syntax
    "B905", # `zip()` without an explicit `strict=` parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # allow unused imports in __init__.py for better package exports
"tests/*" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["build", "dist", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["pagexml_hf"]
addopts = "-v --strict-markers --tb=short --color=yes"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "security: Security-related tests",
    "performance: Performance tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
minversion = "3.12"

[tool.coverage.run]
source = ["pagexml_hf"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["pagexml_hf*"]

[tool.setuptools.dynamic]
version = { attr = "pagexml_hf.__version__" }

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "lxml-stubs>=0.5.1",
    "notebook>=7.5.4",
    "types-pyyaml>=6.0.12.20260408",
]
